--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,6 +12,7 @@ header {
     width: 100%;
     display: flex;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 header span {
@@ -58,6 +59,7 @@ a:hover {
 }
 
 #post {
+    margin-top: 10px;
     margin-bottom: 15px;
     padding: 5px;
     display: flex;
@@ -71,14 +73,12 @@ a:hover {
 
 #resBar {
     display: flex;
-    flex-direction: row;
-    align-items: center;
     margin-top: 5px;
     width: 100%;
+    text-align: center;
 }
 
 #react {
-    align-items: center;
     flex-basis: 0;
     flex-grow: 1;
 }
