--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,9 @@
+#posts {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .post {
     margin-top: 10px;
     margin-bottom: 15px;
@@ -9,8 +15,23 @@
     border-radius: 10px;
     outline: solid 5px #232137;
     font-size: 15px;
-    width: 75%;
+    width: 60%;
 }
+
+.post > h3 {
+    margin-bottom: 0px;
+    color: #9b9bcd;
+}
+
+
+
+
+
+
+
+
+
+
 
 .resBar {
     display: flex;
